# hspiceParser

./: .gitignore  LICENSE  README.md  Usage.md  hSpice_output.md  hspiceParser.py  pixi.toml  pyproject.toml  release.sh
src/hspice_parser/: __init__.py  hspiceParser.py
test/: data_blocks_9601.pickle  data_blocks_ac_9601.pickle  data_blocks_sw_9601.pickle  data_blocks_tr_2001.pickle  data_dict_9601.pickle  data_dict_ac_9601.pickle  data_dict_sw_9601.pickle  data_dict_tr_2001.pickle  sweep_lst_9601.pickle  sweep_lst_ac_9601.pickle  sweep_lst_sw_9601.pickle  sweep_lst_tr_2001.pickle  test.mt0  test.py  test_2001.tr0  test_9601.ac0  test_9601.sw0  test_9601.tr0
