[project]
name = "hspice_parser"
version = "0.1.0"
description = "A parser for HSPICE simulation output files."
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Davoody, Amirhossein", email = "amirhossein.davoody@gmail.com"}
]
dependencies = ["numpy", "scipy"]

[project.scripts]
hsp-parser = "hspice_parser:convert"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatchling.build.targets.wheel]
packages = ["src/hspice_parser"]
